force-app/main/default/objects/Transaction__c/fields/Account_Balance_Before_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance_Before_Transaction__c</fullName>
    <description>Set via flow when transaction is deposited or returned and captures the balance of the account prior to the transaction being committed.</description>
    <label>Account Balance Before Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>