force-app/main/default/objects/Transaction__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <defaultValue>"Department of Industrial Relations Division of Labor Standards Enforcement"</defaultValue>
    <label>Agency Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>