force-app/main/default/objects/Transaction__c/fields/Checks_Purged_By__c.field-meta.xml
<CustomField>
    <fullName>Checks_Purged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checks Purged By</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Transactions (Checks Purged By)</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>