force-app/main/default/objects/Transaction__c/fields/Currency_Only__c.field-meta.xml
<CustomField>
    <fullName>Currency_Only__c</fullName>
    <label>Currency Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>