force-app/main/default/objects/Transaction__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <description>For migrated data. For cashiering, contains the office account code.</description>
    <label>Imported From</label>
    <length>10</length>
    <type>Text</type>
</CustomField>