force-app/main/default/objects/Transaction__c/fields/Office_Account__c.field-meta.xml
<CustomField>
    <fullName>Office_Account__c</fullName>
    <label>Office Account</label>
    <referenceTo>Office_Account__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>