force-app/main/default/objects/Transaction__c/fields/Other_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Amount__c</fullName>
    <description>This field is for miscellaneous use, and the description field should be used.</description>
    <inlineHelpText>When adjusting a bank balance, please enter the adjustment amount in this field, and only in this field,</inlineHelpText>
    <label>Other Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>