force-app/main/default/objects/Transaction__c/fields/Receipting_Cashier__c.field-meta.xml
<CustomField>
    <fullName>Receipting_Cashier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the internal employee that is the Receipting Cashier on the transaction.</description>
    <label>Receipting Cashier</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>