force-app/main/default/objects/Transaction__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <description>'Returned' and 'Stopped' very rarely used. 'Adjusted' may be used in the future.

Old help text: 'Please use Transaction Status of Adjusted for adjustments made by the Sr. Deputy of Cashiering.'</description>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Adjusted</fullName>
                <isActive>false</isActive>
                <label>Adjusted</label>
            </value>
            <value>
                <fullName>Returned</fullName>
                <isActive>false</isActive>
                <label>Returned</label>
            </value>
            <value>
                <fullName>Stopped</fullName>
                <isActive>false</isActive>
                <label>Stopped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>