force-app/main/default/objects/Transaction__c/fields/Transaction_Sum__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Sum__c</fullName>
    <description>For deposits, this is the sum of all eligible RCTs. Populated on record creation by the DepositReceiptsController apex class. If Transaction type is adjustment, this is populated by Transaction Flow by taking the deposit total and adding it here.</description>
    <inlineHelpText>Sum of all payments in this transaction.</inlineHelpText>
    <label>Transaction Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>