force-app/main/default/objects/Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Defines what type of transaction is taking place. 'Return' is not currently used. 'Adjustment' may be used in the future. 

Old help text: 'Set to Adjustment if submitting this transaction to modify the balance of the bank account for any reason other than a standard deposit.'</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
                <default>true</default>
                <label>Deposit</label>
            </value>
            <value>
                <fullName>Adjustment</fullName>
                <isActive>false</isActive>
                <label>Adjustment</label>
            </value>
            <value>
                <fullName>Return</fullName>
                <isActive>false</isActive>
                <label>Return</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>