force-app/main/default/objects/Transaction__c/fields/Treasury_Deposit_Number__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Deposit_Number__c</fullName>
    <label>Treasury Deposit Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>