force-app/main/default/objects/Transaction__c/recordTypes/TRN_Locked.recordType-meta.xml
<RecordType>
    <fullName>TRN_Locked</fullName>
    <active>true</active>
    <description>Once the Treasury Deposit Number &amp; Check Amount is entered and Transaction is deposited, it cannot be changed. Should contact the support team to get it changed</description>
    <label>TRN Locked</label>
</RecordType>