force-app/main/default/objects/Transaction__c/validationRules/AdjustReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AdjustReasonRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT( Transaction_Type__c ) = 'Adjustment',
ISBLANK( Adjustment_Reason__c )
)</errorConditionFormula>
    <errorMessage>Adjustment Reason is required</errorMessage>
</ValidationRule>