force-app/main/default/objects/Transaction__c/validationRules/Amount_required_for_adjustment.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_required_for_adjustment</fullName>
    <active>true</active>
    <description>When depositing an adjustment, an amount is required</description>
    <errorConditionFormula>ISPICKVAL ( Transaction_Type__c , 'Adjustment' )
&amp;&amp;
Deposit_Total__c = 0
&amp;&amp; 
( !ISBLANK ( Treasury_Deposit_Number__c ) || ISPICKVAL ( Transaction_Status__c , 'Deposited' ) )</errorConditionFormula>
    <errorMessage>Please enter an amount to adjust the account by</errorMessage>
</ValidationRule>