force-app/main/default/objects/Transaction__c/validationRules/Office_Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Office_Account_Required</fullName>
    <active>true</active>
    <description>Office Account must be selected on a Transaction</description>
    <errorConditionFormula>ISBLANK( Office_Account__c )</errorConditionFormula>
    <errorDisplayField>Agency_Name__c</errorDisplayField>
    <errorMessage>Office Account must be selected on all transactions</errorMessage>
</ValidationRule>