force-app/main/default/objects/Transaction__c/validationRules/Sr_Cashier_or_SysAd_Adjustment.validationRule-meta.xml
<ValidationRule>
    <fullName>Sr_Cashier_or_SysAd_Adjustment</fullName>
    <active>true</active>
    <description>Only allow Sr Cashiers or SysAds to create Transactions of type 'Adjustment'</description>
    <errorConditionFormula>ISPICKVAL(Transaction_Type__c, 'Adjustment') &amp;&amp;
NOT($Permission.DLSE_Sr_Cashier || CONTAINS($Profile.Name, 'System Administrator'))</errorConditionFormula>
    <errorMessage>Only Sr Cashiers can create adjustment transactions.</errorMessage>
</ValidationRule>