force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Sum__c</columns>
    <columns>Office_Account__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Deposit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>