force-app/main/default/objects/Transaction__c/listViews/All_Deposits.listView-meta.xml
<ListView>
    <fullName>All_Deposits</fullName>
    <columns>NAME</columns>
    <columns>Deposit_Date__c</columns>
    <columns>Office_Account__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Transaction_Sum__c</columns>
    <columns>Check_Count__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Deposits</label>
</ListView>